[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bnnt-tagger"
version = "0.1.0"
description = "GUI tool for tagging BNNT AFM profiles from Gwyddion files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "panel>=1.3",
    "bokeh>=3.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "gwyfile>=0.2",
]

[project.scripts]
bnnt-tagger = "bnnt_tagger:_cli_main"

[tool.setuptools]
py-modules = ["bnnt_tagger"]